swscale: Fix PAL8 input with alpha

Fixes Ticket2158

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>